<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp">

    <EditText
        android:id="@+id/category_edit_text_in_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/category_edit_text_in_category_hint"/>

    <Button
        android:id="@+id/registration_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/category_edit_text_in_category"
        android:text="@string/registration_button_text"/>

    <TextView
        android:id="@+id/delete_category_tag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete_category_tag_text"
        android:layout_marginTop="20dp"
        android:layout_below="@id/registration_button"/>

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:spinnerMode="dropdown"
        android:layout_below="@id/delete_category_tag">
    </Spinner>

    <Button
        android:id="@+id/delete_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/spinner"
        android:text="@string/delete_button_text"/>
</RelativeLayout>