<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="jp.techacademy.takuya.hatakeyama2.taskapp.InputActivity"
    tools:showIn="@layout/activity_input">

    <EditText
        android:id="@+id/title_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title_hint" />
    <EditText
        android:id="@+id/content_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_edit_text"
        android:hint="@string/title_content" />
    <LinearLayout
        android:id="@+id/current_category_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/content_edit_text">
        <TextView
            android:id="@+id/current_category_tag"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="現在のカテゴリー :"
            android:layout_weight="3"/>
        <TextView
            android:id="@+id/current_category_name_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="カテゴリー指定なし"
            android:layout_weight="2"/>

    </LinearLayout>
    <TextView
        android:id="@+id/input_category_name_tag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/current_category_linear_layout"
        android:text="新規カテゴリー"/>
    <Spinner
        android:id="@+id/category_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/input_category_name_tag"
        android:spinnerMode="dropdown"
        />
    <Button
        android:id="@+id/date_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/category_spinner"
        android:layout_alignParentStart="true"
        android:layout_toLeftOf="@+id/times_button"
        android:text="@string/date_button_text"
        style="@style/Widget.AppCompat.Button.Borderless" />
    <Button
        android:id="@id/times_button"
        android:layout_width="96dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/category_spinner"
        android:layout_alignParentRight="true"
        android:text="@string/times_button_text"
        style="@style/Widget.AppCompat.Button.Borderless" />
    <Button
        android:id="@+id/done_button"
        android:layout_width="96dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/times_button"
        android:layout_alignParentRight="true"
        android:text="@string/done_button_text" />

</RelativeLayout>